messed around with shapes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <header>
       <h1>Commitment</h1>
     </header>
+    <div class="triangle-stretch"></div>
+    <div class="circle-fun"></div>
+
   </body>
 </html>
