added backgroundand additional shape

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <header>
       <h1>Commitment</h1>
     </header>
-    <div class="triangle-stretch"></div>
-    <div class="circle-fun"></div>
-
+    <div class="columns">
+      <div class="triangle-stretch"></div>
+      <div class="circle-fun"></div>
+      <div class="parallel-wobble"></div>
+    </div>
   </body>
 </html>
