--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="triangle-stretch"></div>
       <div class="circle-fun"></div>
       <div class="parallel-wobble"></div>
+      <div class="thingy"></div>
       <div class="idunno"></div>
     </div>
   </body>
