added twirling box

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="thingy"></div>
       <div class="idunno"></div>
       <div class="whatsit"></div>
+      <div class="dodad"></div>
     </div>
   </body>
 </html>
