experimented with gradual effect

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <div class="idunno"></div>
       <div class="whatsit"></div>
       <div class="dodad"></div>
+      <div class=""></div>
+      <div class=""></div>
     </div>
   </body>
 </html>
