--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <header>
       <h1>Commitment</h1>
     </header>
-    <div class="columns">
-      <div class="triangle-stretch"></div>
-      <div class="circle-fun"></div>
-      <div class="parallel-wobble"></div>
-      <div class="thingy"></div>
-      <div class="idunno"></div>
-      <div class="whatsit"></div>
-      <div class="dodad"></div>
-      <div class=""></div>
-      <div class=""></div>
+    <div id="overlay">
+      <div class="columns">
+        <div class="triangle-stretch"></div>
+        <div class="circle-fun"></div>
+        <div class="parallel-wobble"></div>
+        <div class="thingy"></div>
+        <div class="idunno"></div>
+        <div class="whatsit"></div>
+        <div class="dodad"></div>
+        <div class=""></div>
+        <div class=""></div>
+      </div>
     </div>
   </body>
 </html>
