--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </div>
     <div class="columns">
       <div class="triangle-stretch"></div>
-      <div class="circle-fun"></div>
-      <div class="parallel-wobble"></div>
-      <div class="thingy"></div>
-      <div class="idunno"></div>
+      <div class="circle-fun"><br><br>our travelers are on a journey to discover how little they know about themselves</div>
+      <div class="parallel-wobble"> tossed in the tides of triviality, cast away into an unfathomable expanse, where new strange and profound stories precipitate in the space between the clouds and the skies</div>
+      <div class="thingy">any day now</div>
+      <div class="idunno"><br><br><br>take a trip, take a pass, pass a feeling</div>
       <div class="whatsit"></div>
-      <div class="dodad"></div>
+      <div class="dodad">while adrift on a sea of everything and nothing, the bear and the man take a look at each other. the man knows his loneliness, and shares it with the bear. the bear hides his loneliness from the man and from himself. </div>
       <div class=""></div>
       <div class=""></div>
     </div>
