--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="triangle-stretch"></div>
       <div class="circle-fun"><br><br>our travelers are on a journey to discover how little they know about themselves</div>
       <div class="parallel-wobble"> tossed in the tides of triviality, cast away into an unfathomable expanse, where new strange and profound stories precipitate in the space between the clouds and the skies</div>
-      <div class="thingy">any day now</div>
+      <div class="thingy"><br>...<br>any day now</div>
       <div class="idunno"><br><br><br>take a trip, take a pass, pass a feeling</div>
       <div class="whatsit">"growl"</div>
       <div class="dodad">while adrift on a sea of everything and nothing, the bear and the man take a look at each other. the man knows his loneliness, and shares it with the bear. the bear hides his loneliness from the man and from himself, instead choosing to mock the man to hide his pain. </div>
